Potentially unsafe use of Class.newInstance
Apparently, we should use clazz.getConstructor().newInstance() rather
than clazz.newInstance().